Fixed attack btn z-index, working on stats page

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -20,3 +20,7 @@
   background-size: 100%;
   height: 100%;
 }
+
+.indie-flower {
+  font-family: 'Indie Flower', cursive;
+}
